--- a/journal.org
+++ b/journal.org
@@ -6825,13 +6825,18 @@ is still roughly the same.
 Therefore, we conclude that this prior is precise enough to make a
 good fit.
 
+******* TODO A larger sd
+found out after many tests that this prior is fine except for the
+generated data, that gets completely off if we give anything less
+precise than sigma~(1e-12,1e-12)
 ***** EDIT With a M_H-2 N_H-2 model
 :LOGBOOK:  
 - State "DONE"       from "STARTED" [2019-06-17 lun. 16:08]
 - State "STARTED"    from "TODO"       [2019-06-17 lun. 14:46]
 :END:      
-****** STARTED Without prior
+****** DONE Without prior
 :LOGBOOK:  
+- State "DONE"       from "STARTED" [2019-06-20 jeu. 13:28]
 - State "STARTED"    from "TODO"       [2019-06-18 mar. 21:25]
 :END:      
 #+begin_src R :results output :session *R* :exports both
@@ -7037,16 +7042,17 @@ Compared to the previous results:
 
 #+RESULTS:
 #+begin_example
-mu[2,1]    6.455300e-11
-mu[2,2]    3.614600e-11
-mu[2,3]    1.854931e-09
-mu[2,4]    3.292596e-09
-mu[2,5]    7.490877e-07
-sigma[2,1] 1.472000e-12
-sigma[2,2] 1.378400e-11
-sigma[2,3] 2.881900e-11
-sigma[2,4] 3.378400e-11
-sigma[2,5] 7.394641e-07
+                   mean
+mu[1,1]    6.455300e-11
+mu[1,2]    3.614600e-11
+mu[1,3]    1.854931e-09
+mu[1,4]    3.292596e-09
+mu[1,5]    7.490877e-07
+sigma[1,1] 1.472000e-12
+sigma[1,2] 1.378400e-11
+sigma[1,3] 2.881900e-11
+sigma[1,4] 3.378400e-11
+sigma[1,5] 7.394641e-07
 #+end_example
 
 #+begin_src R :results output graphics :file ./images/trace_mh2_nh2_no_prior_init_values.png :exports both :width 600 :height 400 :session *R* 
@@ -7055,6 +7061,8 @@ stan_trace(fit, pars=c("mu","sigma"))
 
 #+RESULTS:
 [[file:./images/trace_mh2_nh2_no_prior_init_values.png]]
+This time the results are completely off, with negative values and
+chains that don't converge.
 
 ****** TODO With a less informative prior
 ****** With a precise prior
@@ -7348,7 +7356,7 @@ With the help of Tom who debugged our LateX issues, we tried our hand
 again at making slides with org-mode, using Arnaud's model.
 *** 2019-06-20 thursday
 **** Finished the slides
-**** Plotting the posterior with a M_H-1 N_H-2 model
+**** Plotting the posterior with more observations
 #+begin_src R :results output :session *R* :exports both
 library(rstan)
 library(dplyr)
@@ -7434,17 +7442,96 @@ sm = stan_model(model_code = modelString)
 #+begin_src R :results output :session *R* :exports both
 t_i=list()
 for(i in 1:length(unique(tmp$cpu))){
-  t_i[[i]]=sample_n(select(filter(tmp, tmp$cpu==i+1), c("mnk","duration")),500)
+  t_i[[i]]=sample_n(select(filter(tmp, tmp$cpu==i+1), c("mnk","duration")),2000)
 }
 mnk=lapply(t_i, '[[', 1)
 duration=lapply(t_i, '[[', 2)
 #+end_src
 
 #+begin_src R :results output :session *R* :exports both
-dt = list(N=500,hosts=length(unique(tmp$cpu)),mnk=mnk,duration=duration,it_mean=1e-05,it_sd=1e-06,mu_mean=1e-10,mu_sd=1e-11,sigma_mean=1e-10,sigma_sd=1e-11,n_mean=1e-05,n_sd=1e-06)
+dt = list(N=2000,hosts=length(unique(tmp$cpu)),mnk=mnk,duration=duration,it_mean=1e-05,it_sd=1e-05,mu_mean=1e-10,mu_sd=1e-10,sigma_mean=1e-12,sigma_sd=1e-12,n_mean=1e-05,n_sd=1e-05)
 
-fit = sampling(sm,data=dt, iter=500, chains=4)
+fit = sampling(sm,data=dt, iter=450, chains=3)
 #+end_src
+
+#+RESULTS:
+#+begin_example
+
+SAMPLING FOR MODEL 'aac275819ace426708b4ce4313ed739c' NOW (CHAIN 1).
+Chain 1: 
+Chain 1: Gradient evaluation took 0.023837 seconds
+Chain 1: 1000 transitions using 10 leapfrog steps per transition would take 238.37 seconds.
+Chain 1: Adjust your expectations accordingly!
+Chain 1: 
+Chain 1: 
+Chain 1: Iteration:   1 / 450 [  0%]  (Warmup)
+Chain 1: Iteration:  45 / 450 [ 10%]  (Warmup)
+Chain 1: Iteration:  90 / 450 [ 20%]  (Warmup)
+Chain 1: Iteration: 135 / 450 [ 30%]  (Warmup)
+Chain 1: Iteration: 180 / 450 [ 40%]  (Warmup)
+Chain 1: Iteration: 225 / 450 [ 50%]  (Warmup)
+Chain 1: Iteration: 226 / 450 [ 50%]  (Sampling)
+Chain 1: Iteration: 270 / 450 [ 60%]  (Sampling)
+Chain 1: Iteration: 315 / 450 [ 70%]  (Sampling)
+Chain 1: Iteration: 360 / 450 [ 80%]  (Sampling)
+Chain 1: Iteration: 405 / 450 [ 90%]  (Sampling)
+Chain 1: Iteration: 450 / 450 [100%]  (Sampling)
+Chain 1: 
+Chain 1:  Elapsed Time: 1305.7 seconds (Warm-up)
+Chain 1:                314.951 seconds (Sampling)
+Chain 1:                1620.65 seconds (Total)
+Chain 1: 
+
+SAMPLING FOR MODEL 'aac275819ace426708b4ce4313ed739c' NOW (CHAIN 2).
+Chain 2: 
+Chain 2: Gradient evaluation took 0.025043 seconds
+Chain 2: 1000 transitions using 10 leapfrog steps per transition would take 250.43 seconds.
+Chain 2: Adjust your expectations accordingly!
+Chain 2: 
+Chain 2: 
+Chain 2: Iteration:   1 / 450 [  0%]  (Warmup)
+Chain 2: Iteration:  45 / 450 [ 10%]  (Warmup)
+Chain 2: Iteration:  90 / 450 [ 20%]  (Warmup)
+Chain 2: Iteration: 135 / 450 [ 30%]  (Warmup)
+Chain 2: Iteration: 180 / 450 [ 40%]  (Warmup)
+Chain 2: Iteration: 225 / 450 [ 50%]  (Warmup)
+Chain 2: Iteration: 226 / 450 [ 50%]  (Sampling)
+Chain 2: Iteration: 270 / 450 [ 60%]  (Sampling)
+Chain 2: Iteration: 315 / 450 [ 70%]  (Sampling)
+Chain 2: Iteration: 360 / 450 [ 80%]  (Sampling)
+Chain 2: Iteration: 405 / 450 [ 90%]  (Sampling)
+Chain 2: Iteration: 450 / 450 [100%]  (Sampling)
+Chain 2: 
+Chain 2:  Elapsed Time: 1234.94 seconds (Warm-up)
+Chain 2:                158.446 seconds (Sampling)
+Chain 2:                1393.39 seconds (Total)
+Chain 2: 
+
+SAMPLING FOR MODEL 'aac275819ace426708b4ce4313ed739c' NOW (CHAIN 3).
+Chain 3: 
+Chain 3: Gradient evaluation took 0.022039 seconds
+Chain 3: 1000 transitions using 10 leapfrog steps per transition would take 220.39 seconds.
+Chain 3: Adjust your expectations accordingly!
+Chain 3: 
+Chain 3: 
+Chain 3: Iteration:   1 / 450 [  0%]  (Warmup)
+Chain 3: Iteration:  45 / 450 [ 10%]  (Warmup)
+Chain 3: Iteration:  90 / 450 [ 20%]  (Warmup)
+Chain 3: Iteration: 135 / 450 [ 30%]  (Warmup)
+Chain 3: Iteration: 180 / 450 [ 40%]  (Warmup)
+Chain 3: Iteration: 225 / 450 [ 50%]  (Warmup)
+Chain 3: Iteration: 226 / 450 [ 50%]  (Sampling)
+Chain 3: Iteration: 270 / 450 [ 60%]  (Sampling)
+Chain 3: Iteration: 315 / 450 [ 70%]  (Sampling)
+Chain 3: Iteration: 360 / 450 [ 80%]  (Sampling)
+Chain 3: Iteration: 405 / 450 [ 90%]  (Sampling)
+Chain 3: Iteration: 450 / 450 [100%]  (Sampling)
+Chain 3: 
+Chain 3:  Elapsed Time: 1748.14 seconds (Warm-up)
+Chain 3:                786.417 seconds (Sampling)
+Chain 3:                2534.56 seconds (Total)
+Chain 3:
+#+end_example
 
 #+begin_src R :results output :session *R* :exports both
 print(fit, digits=15,pars=c("intercept[1]","mu[1]","sigma[1]","noise[1]"))
@@ -7453,21 +7540,21 @@ print(fit, digits=15,pars=c("intercept[1]","mu[1]","sigma[1]","noise[1]"))
 #+RESULTS:
 #+begin_example
 Inference for Stan model: aac275819ace426708b4ce4313ed739c.
-4 chains, each with iter=500; warmup=250; thin=1; 
-post-warmup draws per chain=250, total post-warmup draws=1000.
+3 chains, each with iter=450; warmup=225; thin=1; 
+post-warmup draws per chain=225, total post-warmup draws=675.
 
-                     mean      se_mean           sd          2.5%           25%
-intercept[1] 9.543856e-06 4.586447e-07 2.048894e-05 -2.937878e-05 -4.331748e-06
-mu[1]        7.036400e-11 1.140000e-13 4.623000e-12  6.139800e-11  6.733000e-11
-sigma[1]     1.002050e-10 5.000000e-15 2.020000e-13  1.000060e-10  1.000620e-10
-noise[1]     2.554964e-05 3.291607e-07 1.182350e-05  1.078725e-05  1.593036e-05
+                     mean      se_mean           sd          2.5%          25%
+intercept[1] 2.373218e-06 1.494437e-07 3.481054e-06 -4.623710e-06 1.451509e-07
+mu[1]        7.061600e-11 6.000000e-15 1.680000e-13  7.031300e-11 7.050300e-11
+sigma[1]     8.114000e-12 5.000000e-15 1.230000e-13  7.871000e-12 8.037000e-12
+noise[1]     1.149292e-05 5.272804e-08 1.573881e-06  1.005182e-05 1.039819e-05
                       50%          75%        97.5% n_eff      Rhat
-intercept[1] 1.010669e-05 2.381342e-05 4.862562e-05  1996 0.9991379
-mu[1]        7.043300e-11 7.350200e-11 7.887600e-11  1634 0.9970547
-sigma[1]     1.001470e-10 1.002860e-10 1.007090e-10  1752 0.9978440
-noise[1]     2.303954e-05 3.259384e-05 5.371958e-05  1290 1.0007677
+intercept[1] 2.437688e-06 4.723092e-06 8.974229e-06   543 1.0004612
+mu[1]        7.061500e-11 7.072500e-11 7.094200e-11   671 0.9980708
+sigma[1]     8.113000e-12 8.193000e-12 8.367000e-12   734 0.9981126
+noise[1]     1.099513e-05 1.208400e-05 1.593800e-05   891 1.0014252
 
-Samples were drawn using NUTS(diag_e) at Thu Jun 20 13:03:15 2019.
+Samples were drawn using NUTS(diag_e) at Thu Jun 20 16:51:33 2019.
 For each parameter, n_eff is a crude measure of effective sample size,
 and Rhat is the potential scale reduction factor on split chains (at 
 convergence, Rhat=1).
@@ -7484,14 +7571,25 @@ sigma[1]     4.634000e-12 1.000000e-15 9.300000e-14 4.446000e-12 4.571000e-12
 noise[1]     7.424895e-07 1.283709e-09 7.598378e-08 5.971960e-07 6.907532e-07
 #+end_example
 
-#+begin_src R :results output :session *R* :exports both
+#+begin_src R :results output graphics :file (org-babel-temp-file "figure" ".png") :exports both :width 600 :height 400 :session *R* 
 extracted=rstan::extract(fit)
-dtf=data.frame(intercept=colMeans(extracted$intercept),mu=colMeans(extracted$mu),sigma=colMeans(extracted$sigma))
 cpu=1:64
-ggplot(dtf,aes(x=intercept,y=mu)) + stat_ellipse() + geom_point(aes(color=factor(cpu)))
+dtf=data.frame(intercept=extracted$intercept,mu=extracted$mu,sigma=extracted$sigma,mm=colMeans(extracted$mu),ms=colMeans(extracted$sigma))
+nrow(dtf)
 #+end_src
 
 #+RESULTS:
+[[file:/tmp/babel-22717IFn/figure22717IMb.png]]
+
+#+begin_src R :results output :session *R* :exports both
+
+ggplot(data=dtf)+stat_ellipse(mapping=aes(sigma.1,mu.1),colour="blue")+stat_ellipse(aes(sigma.2,mu.2),colour="red")+stat_ellipse(mapping=aes(sigma.3,mu.3),colour="green")+stat_ellipse(mapping=aes(sigma.4,mu.4),color="pink")+stat_ellipse(mapping=aes(ms,mm))
+#+end_src
+
+#+RESULTS:
+[[file:/tmp/babel-22717IFn/figure227177BV.png]]
+
+
 
 
 dtf=data.frame(intercept=extracted$intercept,mu=extracted$mu,sigma=extracted$sigma)
