--- a/journal.org
+++ b/journal.org
@@ -7715,7 +7715,7 @@ With the help of Tom who debugged our LateX issues, we tried our hand
 again at making slides with org-mode, using Arnaud's model.
 *** 2019-06-20 thursday
 **** Finished the slides
-**** Plotting the posterior with more iterations
+**** Plotting the posterior with more posterior data
 #+begin_src R :results output :session *R* :exports both
 library(rstan)
 library(dplyr)
@@ -7864,3 +7864,108 @@ ggplot(dtt,aes(x=intercept,y=mu)) + stat_ellipse() + geom_point(aes(color=factor
 However if we look at the same graph with the means instead of all the
 observations, it doesn't change much from before. We have to see how
 the posterior would be with a bigger sample.
+*** 2019-06-24 monday
+**** Plotting the posterior with more data
+A note: we have to use several chains or a high number of iterations,
+otherwise the quantity of generated parameters will be lower than we
+wanted (250 for each host with 1 chain and 500 iterations, 1000 with 4
+chains and 500 iterations), despite providing more data to the model.
+
+#+begin_src R :results output :session *R* :exports both
+t_i=list()
+for(i in 1:length(unique(tmp$cpu))){
+  t_i[[i]]=sample_n(select(filter(tmp, tmp$cpu==i+1), c("mnk","duration")),1000)
+}
+mnk=lapply(t_i, '[[', 1)
+duration=lapply(t_i, '[[', 2)
+#+end_src
+
+#+begin_src R :results output :session *R* :exports both
+dt = list(N=1000,hosts=length(unique(tmp$cpu)),mnk=mnk,duration=duration,it_mean=1e-05,it_sd=1e-05,mu_mean=1e-10,mu_sd=1e-10,sigma_mean=1e-12,sigma_sd=1e-12,n_mean=1e-05,n_sd=1e-05)
+
+fit = sampling(sm,data=dt, iter=500, chains=4)
+#+end_src
+
+#+RESULTS:
+#+begin_example
+Chain 1:  Elapsed Time: 546.651 seconds (Total)
+Chain 2:  Elapsed Time: 1297.92 seconds (Total)
+Chain 3:  Elapsed Time: 816.947 seconds (Total)
+Chain 4:  Elapsed Time: 510.793 seconds (Total)
+#+end_example
+
+#+begin_src R :results output :session *R* :exports both
+extracted=rstan::extract(fit)
+v=rep(1:64,each=1000)
+dtf=data.frame(intercept=matrix(unlist(extracted$intercept),nrow=length(extracted$intercept),byrow=T), mu=matrix(unlist(extracted$mu), nrow=length(extracted$mu), byrow=T), sigma=matrix(unlist(extracted$sigma), nrow=length(extracted$sigma), byrow=T),cpu=v)
+
+#We save the generated parameters in a file for later use
+write.csv(dtf,file="~/Documents/org/fit.csv")
+
+dtt=data.frame(intercept=colMeans(extracted$intercept),mu=colMeans(extracted$mu),sigma=colMeans(extracted$sigma))
+#+end_src
+
+#+begin_src R :results output graphics :file ./images/mu_on_intercept_more_data.png :exports both :width 600 :height 400 :session *R* 
+ggplot(data=dtf)+stat_ellipse(mapping=aes(intercept,mu,color=factor(cpu)),alpha=0.5)+stat_ellipse(data=dtt,mapping=aes(intercept,mu))
+#+end_src
+
+#+RESULTS:
+[[file:./images/mu_on_intercept_more_data.png]]
+
+#+begin_src R :results output graphics :file ./images/mu_on_sigma_more_data.png :exports both :width 600 :height 400 :session *R* 
+ggplot(data=dtf)+stat_ellipse(mapping=aes(sigma,mu,color=factor(cpu)),alpha=0.5)+stat_ellipse(data=dtt,mapping=aes(sigma,mu))
+#+end_src
+
+#+RESULTS:
+[[file:./images/mu_on_sigma_more_data.png]]
+
+These graphs are extremely similar to the ones where we made the fit
+with more iterations, which leads us to believe that we need to use a
+lot more data from the parameters to see a difference.
+
+To avoid making the fit again, we'll generate parameters values from
+the results we got from the fit.
+
+#+begin_src R :results output :session *R* :exports both
+d=read.csv(file="~/Documents/org/fit.csv", header=TRUE, sep=",")
+d=subset(d,select = c("intercept","mu","sigma","cpu"))
+means=aggregate(d[,1:3],list(d$cpu),mean) 
+#a dataframe of means per host for all of the parameters
+sd=aggregate(d[,1:3],list(d$cpu),sd)
+#+end_src
+
+This time, we get 5000 observations for each host.
+
+#+begin_src R :results output :session *R* :exports both
+v=rep(1:64,each=5000)
+new_it=mapply(rnorm,5000,mean=means$intercept,sd=sd$intercept)
+new_mu=mapply(rnorm,5000,mean=means$mu,sd=sd$mu)
+new_sigma=mapply(rnorm,5000,mean=means$sigma,sd=sd$sigma)
+new_d=data.frame(intercept=matrix(unlist(new_it),nrow=length(new_it),byrow=T),mu=matrix(unlist(new_mu),nrow=length(new_mu),byrow=T),sigma=matrix(unlist(new_sigma),nrow=length(new_sigma),byrow=T),cpu=v)
+new_dtt=data.frame(intercept=colMeans(new_it),mu=colMeans(new_mu),sigma=colMeans(new_sigma))
+#+end_src
+
+#+begin_src R :results output graphics :file ./images/mu_on_intercept_5000_observations.png :exports both :width 600 :height 400 :session *R* 
+ggplot(data=new_d)+stat_ellipse(mapping=aes(intercept,mu,color=factor(cpu)),alpha=0.5)+stat_ellipse(data=new_dtt,mapping=aes(intercept,mu))
+#+end_src
+
+#+RESULTS:
+
+[[file:./images/mu_on_intercept_5000_observations.png]]
+
+#+begin_src R :results output graphics :file ./images/mu_on_sigma_5000_observations.png :exports both :width 600 :height 400 :session *R* 
+ggplot(data=new_d)+stat_ellipse(mapping=aes(sigma,mu,color=factor(cpu)),alpha=0.5)+stat_ellipse(data=new_dtt,mapping=aes(sigma,mu))
+#+end_src
+
+#+RESULTS:
+
+[[file:./images/mu_on_sigma_5000_observations.png]]
+
+We notice the graphs are absolutely similar, which isn't surprising
+because we simply generated more data from the mean and with the
+standard deviation found, so we simply create more points but that
+doesn't make the ellipse smaller since the points are spread out
+according to the sd. What we need to do is get a smaller sd, and that
+is done by having a more precise fit. So we need to try again with
+much bigger samples.
+**** Plotting the posterior with an even bigger sample
